assets/css/template-styles.css
/* Fonts */
@font-face {
    font-family: 'Miriam Libre';
    src: url('{{ "css/fonts/miriamlibre-bold.woff2" | absURL }}') format('woff2'), url('{{ "css/fonts/miriamlibre-bold.woff" | absURL }}') format('woff');
    font-weight: bold;
    font-style: normal;
}
*,
*::before,
*::after {
    font-family: inherit;
    background-color: inherit;
    color: inherit;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html {
    font-size: calc(1em + 0.33vw);
    font-family: Arial, Helvetica Neue, sans-serif;
    line-height: 1.5;
    color: #111;
    background-color: #fefefe;
}
template {
  display: none !important;
}
* + * {
    margin-top: 2.25rem;
}
br,
dt,
dd,
th,
td,
option,
[hidden] + *,
li + li,
body,
.main-and-footer {
    margin-top: 0;
}
p + p {
    margin-top: 0.75rem;
}
.priority {
  margin-top: 0;
}
a {
    text-decoration: none;
    border-bottom: 1px solid;
}
abbr {
    text-decoration: none;
    cursor: help;
    border-bottom: 1px dashed;
}
img {
    max-width: 100%;
    max-height: 50vh;
}
.img-link {
    border-bottom: none;
}
p img {
    margin: 0.75rem 0;
}
figure p img {
    margin: 0;
}
:focus:not([tabindex="-1"]),
[data-expands]:focus svg,
.patterns a:focus .text,
[for="themer"] :focus + [aria-hidden] {
    outline: 4px solid #999;
}
a {
  outline-offset: 2px;
}

/* Katex math typesetting */
.katex * {
    margin-top: 0;
    background-color: transparent;
}

/* Fix for IE :( */
[tabindex="-1"]:focus,
div:not([tabindex]):focus {
    outline: none;
}
[hidden] {
  display: none;
}

/* Skip link */
[href="#main"] {
    display: block;
    width: 100%;
    padding: 0.75rem;
    color: #fefefe;
    background: #000;
    position: absolute;
    top: -3rem;
    text-align: center;
    z-index: 1;
}
[href="#main"]:focus {
    top: 0;
    outline: none;
}

/* Text styles */
h1,
h2,
h3,
h4 {
    font-family: Miriam Libre, serif;
    line-height: 1.125;
}
h1 {
    font-size: 2rem;
}
h2 {
    font-size: 1.66rem;
}
h3 {
    font-size: 1.25rem;
}
h4,
h5 {
    font-size: 1rem;
    font-family: PT Sans, sans-serif;
}
h5 {
    font-size: 0.85rem;
    text-transform: uppercase;
}
kbd {
    line-height: 1;
    font-size: 0.66rem;
    padding: 0.1rem 0.33rem;
    border-radius: 0.25rem;
    border: 2px solid;
    box-shadow: 0.125rem 0.125rem 0 #111;
    vertical-align: 0.33em;
}
pre,
.file-tree {
    overflow-x: auto;
    padding: 1.5rem;
    border: 1px solid;
}
code {
    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
    font-size: 0.85em;
}
.cmd {
    padding: 0.75rem;
    background: #111;
}
.cmd code {
    color: #fefefe;
    white-space: nowrap;
}
.cmd code::before {
    content: '$';
    font-weight: bold;
    padding-right: 0.25em;
}

/* Lists */
main ul,
main ol {
    margin-left: 2.25rem;
}
main li + li {
    margin-top: 0.5rem;
}
main ul ul, main ol ol, main li ul, main li ol {
    margin-top: 0.5rem;
}
ol ol {
  list-style: lower-latin;
}
ol ol ol {
  list-style: lower-roman;
}
main dt {
    font-weight: bold;
}
main dd {
  padding-left: 2rem;
}
dd ul {
  margin-left: 0;
}
dd li + li {
  margin: 0;
}

/* Blockquotes */
blockquote {
  border-left: 0.5rem solid;
  padding-left: 0.75rem;
}
blockquote .author {
  font-size: 0.85rem;
}

/* Buttons */
button {
    font-size: 1.25rem;
    border-radius: 0.33em;
    font-family: inherit;
    background: #111;
    color: #fefefe;
    padding: 0.75rem;
    border: 0;
}
[data-launch] {
  font-size: 0.66rem !important;
  padding: 0.5rem !important;
  margin-top: 0 !important;
  border-radius: 0 !important;
  border-top-left-radius: 0.33rem !important;
  box-shadow: none !important;
  background: #111 !important;
  color: #fefefe !important;
  position: absolute !important;
  right: 0 !important;
  bottom: 0 !important;
}

/* Forms */
label {
  display: inline-block;
  font-weight: bold;
}
[for="themer"] {
  background: #111;
  border-radius: 0.33em;
  color: #fefefe;
  padding: 0.25em 0.75em;
  margin: 0.5rem;
}
[for="themer"] [aria-hidden]::before {
  content: 'off';
}
[for="themer"] :checked + [aria-hidden]::before {
  content: 'on';
}

/* Tables */
table {
    text-align: left;
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
}
th,
td {
    border: 2px solid;
    padding: 0.5rem;
    line-height: 1.25;
    margin: 0;
}
th {
    font-weight: bold;
}
th:empty {
    border: 0;
}

/* Tested using... table */
.tested {
    text-align: center;
    border: 1px solid #111;
}
.tested tr {
    display: flex;
    flex-flow: row wrap;
}
.tested td, .tested th {
    vertical-align: middle;
    overflow: hidden;
    flex: 1 0 auto;
    border: 1px solid #111;
}
.tested th {
    width: 100%;
    background-color: #111;
    color: #fefefe;
    outline-color: #111;
}
.tested img {
    max-width: 3rem;
}
.tested span {
    display: block;
    margin: 0;
}
.tested .additional {
    font-size: 0.85rem;
}
caption {
    font-size: 1.125rem;
    padding-bottom: 0.25rem;
    font-style: italic;
}

/* Page structure */
.wrapper {
    position: relative;
    margin-top: 0;
    overflow-x: hidden;
}
.intro-and-nav {
    font-size: 0.8rem;
    width: 15rem;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    border-right: 2px solid;
}
.intro-and-nav > div {
    padding: 2.25rem;
    display: flex;
    flex-direction: column;
    height: 100%;
}
.intro {
  flex: 0 0 auto;
}
.patterns {
  flex: 1 1 auto;
}
.logo {
    border: 0;
}
.logo img {
    width: 100%;
    max-width: 12rem;
}
.library-desc {
    margin-top: 0.5rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 25rem;
}
.main-and-footer {
    margin-left: 15rem;
}
.main-and-footer > div {
    max-width: 40rem;
    margin: 0 auto;
    padding: 2.25rem;
}
[role="contentinfo"] {
    font-size: 0.85rem;
    margin-top: 4rem;
    text-align: center;
}

/* Patterns navigation */
.patterns {
    overflow: auto;
    margin-top: 1.5rem;
}
.patterns * {
    margin-top: 0;
}
.patterns h3 {
    font-size: 1rem;
}
/* ... */

